--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <a href="#certifications">Certifications</a>
             <a href="#quiz">Imaging & Quiz</a>
             <a href="#fighting-cancer">Fighting Cancer</a>
+            <a href="#our-vision-3d">Our Vision in 3D</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -88,22 +89,17 @@
     <div class="container mx-auto p-4 sm:p-6 lg:p-8 flex-grow w-full">
         <section id="about" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">About Us: Empowering Health and Research in Zimbabwe</h2>
+                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">About Us: Empowering Health in Zimbabwe</h2>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300"><span class="subtle-underline">samRad Health Technologies</span> is a <span class="subtle-underline">visionary</span> health technology enterprise dedicated to transforming cancer care and fostering medical research, <strong class="text-emerald-600 dark:text-emerald-400">starting with Zimbabwe</strong>. Our core mission is to <span class="subtle-underline">pioneer</span> intelligent, automated systems that <span class="subtle-underline">empower</span> clinicians to detect and quantify tumors from radiological imaging with <span class="subtle-underline">precision</span> and ease. Our AI pipelines are open, transparent, and designed to speed up diagnostics and enhance medical research, ultimately benefiting patients in our home country and beyond.</p>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Founded by <strong>Samuel Khumbula (Takwirira, Barachel)</strong>, a Zimbabwean PhD student in Physics at the University of New Hampshire in the United States (starts Fall 2025, God willing), this initiative is deeply rooted in a passion for oncology and a heartfelt, unwavering commitment to expanding access to quality care <strong class="text-emerald-600 dark:text-emerald-400">within Zimbabwe</strong>. Coming from a background marked by economic hardship and limited access to advanced healthcare, <strong>Samuel</strong> has firsthand experience of the profound challenges faced by many cancer patients in our communities.</p>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Through <span class="subtle-underline">resilience</span>, <span class="subtle-underline">dedication</span>, and a relentless pursuit of education, Samuel now seeks to leverage his expertise to transform lives—not just through innovation, but by creating <span class="subtle-underline">sustainable pathways</span> for improved health outcomes and research capabilities <strong class="text-emerald-600 dark:text-emerald-400">back home in Zimbabwe</strong>. samRad Health Technologies' primary aspiration is to establish life-changing partnerships with hospitals and research institutions across Zimbabwe, uplifting cancer care through technological excellence, shared knowledge, and a commitment to local capacity building. <strong class="text-emerald-600 dark:text-emerald-400">My education in the United States is a crucial step to acquire the specialized knowledge and skills necessary to bring these advanced solutions directly to Zimbabwe, where they are most needed.</strong></p>
-
-                <!-- 3D Element Container -->
-                <div id="three-d-container" class="rounded-lg shadow-inner">
-                    <canvas id="three-d-canvas"></canvas>
-                </div>
-                <p class="text-sm mt-4 text-gray-600 dark:text-gray-400 text-center">Explore a conceptual 3D representation of data and health innovation above.</p>
+                <!-- Removed 3D element and its descriptive text from here -->
             </div>
         </section>
 
         <section id="services" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
             <div class="max-w-6xl mx-auto">
-                <h2 class="text-4xl font-extrabold mb-8 text-gray-900 dark:text-white text-center">Our Services: Driving Innovation for Better Health in Zimbabwe</h2>
+                <h2 class="text-4xl font-extrabold mb-8 text-gray-900 dark:text-white text-center">Our Services</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
                         <h3 class="text-2xl font-bold mb-3 text-gray-900 dark:text-white">AI-Powered Tumor Detection</h3>
@@ -127,14 +123,14 @@
 
         <section id="continuous-improvement" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Advancements: Pioneering Research and Development for Zimbabwe</h2>
+                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Advancements & R&D</h2>
                 <p class="text-lg leading-relaxed mx-auto text-gray-700 dark:text-gray-300">At samRad Health Technologies, our mission centers on <strong class="text-emerald-600 dark:text-emerald-400">precision</strong> in cancer detection and treatment. We are constantly working to bring <span class="subtle-underline">cutting-edge</span> advancements to cancer care through intelligent, automated systems that empower clinicians to detect and quantify tumors from radiological imaging with precision and ease. <strong class="text-emerald-600 dark:text-emerald-400">Our research and development efforts are strategically aligned with the specific health challenges and opportunities present in Zimbabwe, ensuring our solutions are relevant and impactful for our nation's healthcare future.</strong></p>
             </div>
         </section>
 
         <section id="certifications" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-extrabold mb-8 text-gray-900 dark:text-white text-center">Certifications & Research Ethics: Upholding Global Standards for Local Impact</h2>
+                <h2 class="text-4xl font-extrabold mb-8 text-gray-900 dark:text-white text-center">Certifications & Ethics</h2>
                 <ul class="space-y-4 text-left max-w-2xl mx-auto text-gray-700 dark:text-gray-300">
                     <li class="text-lg">Fully compliant with <strong class="text-emerald-600 dark:text-emerald-400">HIPAA</strong> data handling protocols to ensure patient data privacy and security, providing a robust framework for ethical data management <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe and globally</strong>.</li>
                     <li class="text-lg">Model validation on ethically sourced, anonymized datasets to maintain <span class="subtle-underline">integrity</span> and prevent bias, ensuring our AI models are fair and effective for diverse populations, including those <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe</strong>.</li>
@@ -145,7 +141,7 @@
 
         <section id="quiz" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Imaging and Quiz: Empowering Patients and Clinicians in Zimbabwe</h2>
+                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Imaging & Quiz</h2>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Medical imaging&mdash;like MRI, CT, and PET scans&mdash;is often the first critical step in diagnosing and treating cancer. These tools guide crucial decisions and shape patient care, yet many people, especially <strong class="text-emerald-600 dark:text-emerald-400">in underserved regions like parts of Zimbabwe</strong>, don’t fully understand what they are or how they work. Our aim is to demystify this process and make information more accessible.</p>
 
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Early detection is especially critical for cancers like breast cancer, prostate cancer, and glioblastoma. Catching these diseases in their earliest stages can significantly improve treatment options, reduce the need for aggressive interventions, and dramatically boost survival rates. <strong class="text-emerald-600 dark:text-emerald-400">This is particularly vital in Zimbabwe, where late-stage diagnoses are common due to limited access to advanced diagnostic tools and awareness.</strong></p>
@@ -165,10 +161,21 @@
 
         <section id="fighting-cancer" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Fighting Cancer: Our Commitment to Awareness and Support</h2>
+                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Fighting Cancer</h2>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">At <strong class="text-emerald-600 dark:text-emerald-400">samRad Health Technologies</strong>, our mission extends beyond technology to a deep commitment to the fight against cancer. We believe that <span class="subtle-underline">awareness</span> and <span class="subtle-underline">education</span> are powerful tools in preventing and managing this disease, especially in communities where access to information and healthcare resources can be limited.</p>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">We are dedicated to fostering a culture of <span class="subtle-underline">proactive health</span> and providing accessible resources that empower individuals to understand cancer risks, recognize early symptoms, and seek timely medical attention. Our initiatives aim to bridge the knowledge gap and support patients through their journey, from diagnosis to recovery.</p>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Through partnerships with local health organizations and community leaders <strong class="text-emerald-600 dark:text-emerald-400">across Zimbabwe</strong>, we strive to amplify messages of hope and resilience. We advocate for improved screening programs, provide educational materials, and support research that leads to better outcomes for all. Together, we can make a significant impact in reducing the burden of cancer and building healthier futures.</p>
+            </div>
+        </section>
+
+        <section id="our-vision-3d" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md mt-8">
+            <div class="max-w-4xl mx-auto text-center">
+                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white">Our Vision in 3D</h2>
+                <!-- 3D Element Container -->
+                <div id="three-d-container" class="rounded-lg shadow-inner">
+                    <canvas id="three-d-canvas"></canvas>
+                </div>
+                <p class="text-sm mt-4 text-gray-600 dark:text-gray-400 text-center">A conceptual 3D representation of data and health innovation.</p>
             </div>
         </section>
 
@@ -400,14 +407,14 @@
 
         // --- Three.js Integration ---
         let scene, camera, renderer, icosahedron, samRadText;
-        let mouseX = 0, mouseY = 0;
+        // Removed mouseX, mouseY as they are no longer needed for camera movement
         let containerRect; // Declare globally to store the bounding rectangle of the 3D container
 
         function initThreeD() {
             const container = document.getElementById('three-d-container');
             const canvas = document.getElementById('three-d-canvas');
 
-            // Get initial bounding rectangle for mouse calculations
+            // Get initial bounding rectangle for mouse calculations (still useful for initial centering)
             containerRect = container.getBoundingClientRect();
 
             // Scene
@@ -420,6 +427,7 @@
             // Camera
             camera = new THREE.PerspectiveCamera(75, container.clientWidth / container.clientHeight, 0.1, 1000);
             camera.position.z = 10; // Adjust camera position to see both shape and text
+            camera.lookAt(scene.position); // Ensure camera looks at the center of the scene
 
             // Renderer
             renderer = new THREE.WebGLRenderer({ canvas: canvas, antialias: true });
@@ -476,20 +484,13 @@
             });
 
 
-            // Event Listeners for mouse interaction
-            document.addEventListener('mousemove', onDocumentMouseMove, false);
+            // Removed mousemove event listener as camera interaction is no longer desired
             window.addEventListener('resize', onWindowResize, false);
 
             animateThreeD(); // Start the animation loop
         }
 
-        function onDocumentMouseMove(event) {
-            // Calculate mouse position relative to the canvas container's center
-            // event.clientX/Y are relative to the viewport
-            // containerRect.left/top are the container's position relative to the viewport
-            mouseX = ((event.clientX - containerRect.left) - containerRect.width / 2) / 100;
-            mouseY = ((event.clientY - containerRect.top) - containerRect.height / 2) / 100;
-        }
+        // Removed onDocumentMouseMove function as camera interaction is no longer desired
 
         function onWindowResize() {
             const container = document.getElementById('three-d-container');
@@ -499,23 +500,15 @@
             camera.aspect = container.clientWidth / container.clientHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(container.clientWidth, container.clientHeight);
+            // After resizing, ensure the camera still looks at the center
+            camera.lookAt(scene.position);
         }
 
         function animateThreeD() {
             requestAnimationFrame(animateThreeD);
 
-            if (icosahedron) { // Ensure icosahedron is loaded
-                icosahedron.rotation.x += 0.002; // Slower rotation
-                icosahedron.rotation.y += 0.002;
-            }
-
-            // samRadText remains static, no rotation applied here
-            if (samRadText) {
-                // Simple camera movement based on mouse
-                camera.position.x += (mouseX - camera.position.x) * .05;
-                camera.position.y += (- mouseY - camera.position.y) * .05;
-                camera.lookAt(scene.position);
-            }
+            // No rotation for icosahedron or samRadText
+            // The objects are now completely static.
 
             renderer.render(scene, camera);
         }
