--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <section id="certifications" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto">
                 <h2 class="text-4xl font-extrabold mb-8 text-gray-900 dark:text-white text-center">Certifications & Ethics</h2>
-                <ul class="space-y-4 text-left max-w-2xl mx-auto text-gray-700 dark:text-gray-300">
+                <ul class="space-y-4 text-left text-gray-700 dark:text-gray-300">
                     <li class="text-lg">Fully compliant with <strong class="text-emerald-600 dark:text-emerald-400">HIPAA</strong> data handling protocols to ensure patient data privacy and security, providing a robust framework for ethical data management <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe and globally</strong>.</li>
                     <li class="text-lg">Model validation on ethically sourced, anonymized datasets to maintain <span class="subtle-underline">integrity</span> and prevent bias, ensuring our AI models are fair and effective for diverse populations, including those <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe</strong>.</li>
                     <li class="text-lg">Strict adherence to <strong class="text-emerald-600 dark:text-emerald-400">IRB</strong> (Institutional Review Board) and institutional ethics review processes for all research and development, upholding the highest standards of ethical practice in all our endeavors <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe and internationally</strong>.</li>
