--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white">Contact Us</h2>
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">We are eager to connect with healthcare institutions, researchers, and partners who share our vision for advancing health and research in Zimbabwe. Please reach out to discuss collaboration opportunities.</p>
                 <p class="text-lg leading-relaxed text-gray-700 dark:text-gray-300">Email: <a href="mailto:info@samradhealth.org" class="text-emerald-600 dark:text-emerald-400 hover:underline">info@samradhealth.org</a></p>
-                <p class="text-lg leading-relaxed text-gray-700 dark:text-gray-300">Phone: <a href="tel:+263771234567" class="text-emerald-600 dark:text-emerald-400 hover:underline">+263 771 234 567 (Zimbabwe)</a></p>
+                <p class="text-lg leading-relaxed text-gray-700 dark:text-gray-300">Phone: <a href="tel:+263788643858" class="text-emerald-600 dark:text-emerald-400 hover:underline">+263 788643858 (Zimbabwe)</a></p>
             </div>
         </section>
 
