--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <section id="quiz" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto">
                 <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Imaging & Quiz</h2>
-                <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Medical imaging&mdash;like MRI, CT, and PET scans&mdash;is often the first critical step in diagnosing and treating cancer. These tools guide crucial decisions and shape patient care, yet many people, especially <strong class="text-emerald-600 dark:text-emerald-400">in underserved regions like parts of Zimbabwe</strong>, don’t fully understand what they are or how they work. Our aim is to demystify this process and make information more accessible.</p>
+                <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Medical imaging&mdash;like MRI, CT, and PET scans&mdash;is often the first critical step in diagnosing and treating cancer. These tools guide crucial decisions and shape patient care, yet many <strong class="text-emerald-600 dark:text-emerald-400">Zimbabweans</strong> don’t fully understand what they are or how they work. Our aim is to demystify this process and make information more accessible.</p>
 
                 <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Early detection is especially critical for cancers like breast cancer, prostate cancer, and glioblastoma. Catching these diseases in their earliest stages can significantly improve treatment options, reduce the need for aggressive interventions, and dramatically boost survival rates. <strong class="text-emerald-600 dark:text-emerald-400">This is particularly vital in Zimbabwe, where late-stage diagnoses are common due to limited access to advanced diagnostic tools and awareness.</strong></p>
 
@@ -183,7 +183,7 @@
         <section id="contact" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto text-center">
                 <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white">Contact Us</h2>
-                <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">We are eager to connect with healthcare institutions, researchers, and partners who share our vision for advancing health and research in Zimbabwe. Please reach out to discuss collaboration opportunities.</p>
+                <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">We are eager to connect with healthcare institutions, researchers, and partners who share our vision for advancing healthcare and radiation oncology research in Zimbabwe. Please reach out to discuss collaboration opportunities.</p>
                 <p class="text-lg leading-relaxed text-gray-700 dark:text-gray-300">Email: <a href="takwirira@pm.me" class="text-emerald-600 dark:text-emerald-400 hover:underline">takwirira@pm.me</a></p>
                 <p class="text-lg leading-relaxed text-gray-700 dark:text-gray-300">Phone: <a href="tel:+263788643858" class="text-emerald-600 dark:text-emerald-400 hover:underline">+263 788643858 (Zimbabwe)</a></p>
             </div>
