--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             <a href="#continuous-improvement">Advancements</a>
             <a href="#certifications">Certifications</a>
             <a href="#quiz">Imaging & Quiz</a>
-            <a href="#fighting-cancer">Fighting Cancer</a>
             <a href="#our-vision-3d">Our Vision in 3D</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -103,15 +102,15 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
                         <h3 class="text-2xl font-bold mb-3 text-gray-900 dark:text-white">AI-Powered Tumor Detection</h3>
-                        <p class="text-gray-600 dark:text-gray-300">Instant analysis of medical scan images (DICOM) to assess cancer risk using advanced, expertly trained AI models. This will allow for earlier and more accurate diagnoses, particularly <strong class="text-emerald-600 dark:text-emerald-400">in resource-constrained settings like Zimbabwe</strong>.</p>
+                        <p class="text-gray-600 dark:text-gray-300">Instant analysis of medical scan images (DICOM) to assess cancer risk using advanced, expertly trained AI models. This will allow for earlier and more accurate diagnoses.</p>
                     </div>
                     <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
                         <h3 class="text-2xl font-bold mb-3 text-gray-900 dark:text-white">Clinical Research Pipeline Tools</h3>
-                        <p class="text-gray-600 dark:text-gray-300">Command-line tools designed to empower clinical researchers to process imaging data and patient datasets efficiently at scale, fostering local research capabilities and contributions to global medical knowledge <strong class="text-emerald-600 dark:text-emerald-400">within Zimbabwe</strong>.</p>
+                        <p class="text-gray-600 dark:text-gray-300">Command-line tools designed to empower clinical researchers to process imaging data and patient datasets efficiently at scale, fostering local research capabilities and contributions to global medical knowledge.</p>
                     </div>
                     <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
                         <h3 class="text-2xl font-bold mb-3 text-gray-900 dark:text-white">Data Integration & Interoperability</h3>
-                        <p class="text-gray-600 dark:text-gray-300">Robust support for structured CSV metadata, clinical tagging, and export-ready research formats. Seamlessly integrate with existing hospital systems, ensuring practical and impactful implementation <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwean healthcare settings</strong>.</p>
+                        <p class="text-gray-600 dark:text-gray-300">Robust support for structured CSV metadata, clinical tagging, and export-ready research formats. Seamlessly integrate with existing hospital systems, ensuring practical and impactful implementation in Zimbabwean healthcare settings.</p>
                     </div>
                     <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
                         <h3 class="text-2xl font-bold mb-3 text-gray-900 dark:text-white">Free Health Education</h3>
@@ -159,14 +158,7 @@
             </div>
         </section>
 
-        <section id="fighting-cancer" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
-            <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white text-center">Fighting Cancer</h2>
-                <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">At <strong class="text-emerald-600 dark:text-emerald-400">samRad Health Technologies</strong>, our mission extends beyond technology to a deep commitment to the fight against cancer. We believe that <span class="subtle-underline">awareness</span> and <span class="subtle-underline">education</span> are powerful tools in preventing and managing this disease, especially in communities where access to information and healthcare resources can be limited.</p>
-                <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">We are dedicated to fostering a culture of <span class="subtle-underline">proactive health</span> and providing accessible resources that empower individuals to understand cancer risks, recognize early symptoms, and seek timely medical attention. Our initiatives aim to bridge the knowledge gap and support patients through their journey, from diagnosis to recovery.</p>
-                <p class="text-lg leading-relaxed mb-4 text-gray-700 dark:text-gray-300">Through partnerships with local health organizations and community leaders <strong class="text-emerald-600 dark:text-emerald-400">across Zimbabwe</strong>, we strive to amplify messages of hope and resilience. We advocate for improved screening programs, provide educational materials, and support research that leads to better outcomes. Together, we can make a significant impact in reducing the burden of cancer and building healthier futures.</p>
-            </div>
-        </section>
+    
 
         <section id="our-vision-3d" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md mt-8">
             <div class="max-w-4xl mx-auto text-center">
