--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <ul class="space-y-4 text-left text-gray-700 dark:text-gray-300">
                     <li class="text-lg">Fully compliant with <strong class="text-emerald-600 dark:text-emerald-400">HIPAA</strong> data handling protocols to ensure patient data privacy and security, providing a robust framework for ethical data management <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe and globally</strong>.</li>
                     <li class="text-lg">Model validation on ethically sourced, anonymized datasets to maintain <span class="subtle-underline">integrity</span> and prevent bias, ensuring our AI models are fair and effective for diverse populations, including those <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe</strong>.</li>
-                    <li class="text-lg">Strict adherence to <strong class="text-emerald-600 dark:text-emerald-400">IRB</strong> (Institutional Review Board) and institutional ethics review processes for all research and development, upholding the highest standards of ethical practice in all our endeavors <strong class="text-emerald-600 dark:text-emerald-400">in Zimbabwe and internationally</strong>.</li>
+                    <li class="text-lg">Strict adherence to <strong class="text-emerald-600 dark:text-emerald-400">IRB</strong> (Institutional Review Board) and institutional ethics review processes for all research and development, upholding the highest standards of ethical practice in all our endeavors.</li>
                 </ul>
             </div>
         </section>
